--- a/index.html
+++ b/index.html
@@ -1,27 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MarvelShop</title>
+    <title>Заголовок документу - ім'я вкладки в браузеру</title>
 </head>
+
 <body>
-    <header>
-        <nav>
-            <h1>
-                <a href="https://www.google.com/" target="_blank">
-                    <img src="images/marvel=logo.png" width="90" height="40"alt="marvel-logo">
-                </a>
-            </h1>
-            <ul>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Series</a></li>
-                <li><a href="#">Character</a></li>
-            </ul>
-        </nav>
-        <h2>All Marvel Comics in one place</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis modi officiis in deleniti sapiente aut dicta sint provident, cum explicabo reiciendis soluta fuga a voluptatem illo amet architecto, earum quam?</p>
-    </header>
+    <h1>Найбільший заголовок, має бути тільки один!</h1>
+    <p>Параграф тексту - завжди починається з нової строки. </p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id nihil laudantium architecto voluptatum est,
+         eaque similique maiores veritatis! Expedita delectus laborum eos suscipit amet officiis. Earum ratione 
+         rem aliquam id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit recusandae enim, quos accusamus 
+         sunt asperiores expedita, beatae dolores voluptate magni dicta esse id alias! Animi omnis a blanditiis soluta 
+         inventore.</p>
+    <input style="width: 100%;" type="text" value="ось сюди можемо щось ввести">
+    <h2>Заголовок поменше, таких вже може бути багато</h2>
+    <p>Іще параграф тексту.
+        Взагалі то може бути дуже довгим,
+        а не тільки в одну строку.
+        <strong>Може мати в середині іще інші теги,
+            наприклад з жирними літерами</strong>
+        <i>Чи курсивними</i>
+    </p>
+
+    <p>Something else</p>
+
+    <h3>Ось так додається картинка: </h3>
+    <img src="https://cdn.pixabay.com/photo/2023/03/14/12/41/wheat-7852286_640.jpg" style="width:100%">
+
+    <p><b> Bold text </b></p>
+    <p><strong> Important text</strong></p>
+    <p><i> Italic text</i></p>
+    <p><em> Emphasized text</em></p>
+    <p><mark> Marked text</mark></p>
+    <p><small> Smaller text</small></p>
+    <p><del> Deleted text</del></p>
+    <p><ins> Inserted text</ins></p>
+    <p>Just normal text <sub> Subscript text</sub></p>
+    <p>Just normal text <sup> Superscript text</sup></p>
+
+    <a href="https://www.w3schools.com/html/html_links.asp">
+        Посилання на сторінку про посилання
+    </a>
+
+
+    <h3>Ось так додається табличка: </h3>
+    <table style="border: 1px red solid">
+        <tbody>
+            <thead>
+                <td style="border: 1px blue solid">Перший стовпчик</td>
+                <td style="border: 1px blue solid">Другий стовпчик</td>
+            </thead>
+            <tr>
+                <td style="border: 1px green solid">1</td>
+                <td style="border: 1px green solid">2</td>
+            </tr>
+            <tr>
+                <td style="border: 1px green solid">3</td>
+                <td style="border: 1px green solid">4</td>
+            </tr>
+        </tbody>
+    </table>
+    
 </body>
+
 </html>
