--- a/index.html
+++ b/index.html
@@ -1,50 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заголовок документу - ім'я вкладки в браузеру</title>
+    <title>MarvelShop</title>
 </head>
-
 <body>
-    <h1>Найбільший заголовок, має бути тільки один!</h1>
-    <p>Параграф тексту - завжди починається з нової строки. </p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id nihil laudantium architecto voluptatum est,
-         eaque similique maiores veritatis! Expedita delectus laborum eos suscipit amet officiis. Earum ratione 
-         rem aliquam id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit recusandae enim, quos accusamus 
-         sunt asperiores expedita, beatae dolores voluptate magni dicta esse id alias! Animi omnis a blanditiis soluta 
-         inventore.</p>
-    <input style="width: 100%;" type="text" value="ось сюди можемо щось ввести">
-    <h2>Заголовок поменше, таких вже може бути багато</h2>
-    <p>Іще параграф тексту.
-        Взагалі то може бути дуже довгим,
-        а не тільки в одну строку.
-        <strong>Може мати в середині іще інші теги,
-            наприклад з жирними літерами</strong>
-        <i>Чи курсивними</i>
-    </p>
+    <header>
+        <nav>
+            <h1>
+                <a href="https://www.google.com/" target="_blank">
+                    <img src="images/marvel=logo.png" width="90" height="40"alt="marvel-logo">
+                </a>
+            </h1>
+            <ul>
+                <li><a href="#news">News</a></li>
+                <li><a href="#">Series</a></li>
+                <li><a href="#">Character</a></li>
+            </ul>
+        </nav>
+        <h2>All Marvel Comics in one place</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis modi officiis in deleniti sapiente aut dicta sint provident, cum explicabo reiciendis soluta fuga a voluptatem illo amet architecto, earum quam?</p>
+        <input type="text">
+        <button>
+            <img src="images/spider-man-logo.png" wight="20" height="20" alt="">
+        </button>
+        <p>With great power......</p>
+        <p>Benjamin Parker</p>
+        <div>
+            <img src="images/avengerspng.png" width="100" alt="avenger picture">
+            <p>Avengers Univers</p>
 
-    <p>Something else</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem tempore possimus pariatur velit rerum enim eligendi natus commodi porro fugiat, numquam iste, obcaecati facere iure corrupti ullam nam illo nesciunt.</p>
+            <a href="#">See details</a>
+        </div>
+ </header>
 
-    <h3>Ось так додається картинка: </h3>
-    <img src="https://cdn.pixabay.com/photo/2023/03/14/12/41/wheat-7852286_640.jpg" style="width:100%">
+ <main>
+    <section id="news">
+        <h2>LATEST RELEASES</h2>
+        <ul>
+            <li>
+                <img src="images/spider-man.png" width="150" alt="spider-man release">
+                <img src="images/svg/start.svg" alt="rating star">
+                <span>4.0</span>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <img src="images/avengerspng.png" width="150" alt="avengers release">
+                <img src="images/svg/start.svg" alt="rating star">
+                <span>4.5</span>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <img src="images/guardians.png" width="150" alt="guardiansrelease">
+                <img src="images/svg/start.svg" alt="rating star">
+                <span>2.1</span>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <img src="images/hulk.png" width="150" alt="hulk release">
+                <img src="images/svg/start.svg" alt="rating star">
+                <span>3.5</span>
+            </li>
+        </ul>
 
-    <p><b> Bold text </b></p>
-    <p><strong> Important text</strong></p>
-    <p><i> Italic text</i></p>
-    <p><em> Emphasized text</em></p>
-    <p><mark> Marked text</mark></p>
-    <p><small> Smaller text</small></p>
-    <p><del> Deleted text</del></p>
-    <p><ins> Inserted text</ins></p>
-    <p>Just normal text <sub> Subscript text</sub></p>
-    <p>Just normal text <sup> Superscript text</sup></p>
-
-    <a href="https://www.w3schools.com/html/html_links.asp">
-        Посилання на сторінку про посилання
-    </a>
+    </section>
+ </main>
 </body>
-
 </html>
