--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="#news">News</a></li>
                 <li><a href="#">Series</a></li>
-                <li><a href="#">Character</a></li>
+                <li><a href="#character">Character</a></li>
             </ul>
         </nav>
         <h2>All Marvel Comics in one place</h2>
@@ -56,7 +56,7 @@
         </ul>
         <ul>
             <li>
-                <img src="images/guardians.png" width="150" alt="guardiansrelease">
+                <img src="images/guardians.png" width="150" alt="guardians release">
                 <img src="images/svg/start.svg" alt="rating star">
                 <span>2.1</span>
             </li>
@@ -69,6 +69,42 @@
             </li>
         </ul>
 
+    </section>
+ </main>
+
+ <main>
+    <section id="character">
+        <h2>CHARACTERS</h2>
+        <ul>
+            <li>
+                <img src="images/char-spider.png" width="150" alt="char-spider">
+                <span>Spiderman</span>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <img src="images/char-wolverine.png" width="150" alt="char-wolverine">
+                <span>Wolverine</span>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <img src="images/char-iron-man.png" width="150" alt="char-iron-man">
+                <span>Iron-man</span>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <img src="images/char-captain-america.png" width="150" alt="char-captain-america">
+                <span>Captain-america</span>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <img src="images/char-captain-marvel.png" width="150" alt="char-captain-marvel">
+                <span>Captain-marvel</span>
+            </li>
+        </ul>
     </section>
  </main>
 </body>
