--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
             <h2 class="releases__title">Latest Releases</h2>
             <ul class="releases__wrapper">
                 <li class="releases__item">
+                    <a href="./avengers.html"><img class="releases__picture" width="150" height="226" src="images/avengerspng.png" alt="avengers release">
+                        <div class="rating__wrapper">
+                            <img src="images/svg/star.svg" alt="rating star">
+                            <span>4.5</span>
+                        </div>
+                    </a>
                     <img class="releases__picture" width="150" src="images/spider-man.png" alt="spider man release">
                     <div class="rating__wrapper">
                         <img src="images/svg/star.svg" alt="rating star">
@@ -160,7 +166,7 @@
                 </li>
             </ul>
         </div>
-        <ul>
+        <ul class="footer-menu">
             <h3>Menu</h3>
             <li><a href="#news">News</a></li>
             <li><a href="#series">Series</a></li>
