--- a/avengers.html
+++ b/avengers.html
@@ -35,7 +35,7 @@
     </header>
     <main>
         <section class="main-content">
-            <h2>Avengers UNIVERSE</h2>
+            <h2 class="avender-universe_title">Avengers UNIVERSE</h2>
             <div class="main-info__wrapper">
                 <img src="images/avengerspng.png" width="150" height="262" alt="avenger">
             <div class="info-wrapper">
@@ -66,8 +66,17 @@
                     <span>Avengers</span>
                 </p>
                </div>
+               <h3>Description</h3>
+               <p class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic laborum exercitationem, eveniet obcaecati aliquid sunt, quia dolorum rem dolorem quas explicabo. Ut unde consequatur sunt laudantium necessitatibus fuga nisi repellat?</p>
+            </div>
+            <div class="cart-wrapper">
+                <p class="price">$24</p>
+                <p class="in-stock">In stock</p>
+                <button class="cart-button add-button" >Add to card</button>
+                <button class="cart-button buy-button">Buy now</button>
             </div>
             </div>
+            
             
         </section>
     </main>
