--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="input__wrapper">
                     <input class="search-input" type="text">
                     <button class="search-button">
-                        <img src="images/svg/magnifying-glass.svg" width="20" alt="search icon">
+                        <img src="images/svg/magnifying-glass.svg" width="25" alt="search icon">
                     </button>
                 </div>
                 <p>With great power....</p>
@@ -64,34 +64,31 @@
             <h2 class="releases__title">Latest Releases</h2>
             <ul class="releases__wrapper">
                 <li class="releases__item">
-                    <a href="./avengers.html"><img class="releases__picture" width="150" height="226" src="images/avengerspng.png" alt="avengers release">
-                        <div class="rating__wrapper">
-                            <img src="images/svg/star.svg" alt="rating star">
-                            <span>4.5</span>
-                        </div>
-                    </a>
-                    <img class="releases__picture" width="150" src="images/spider-man.png" alt="spider man release">
+                    <img class="releases__picture" width="150" height="226" src="images/spider-man.png" alt="spider man release">
                     <div class="rating__wrapper">
                         <img src="images/svg/star.svg" alt="rating star">
                         <span>4.0</span>
                     </div>
                 </li>
+                
                 <li class="releases__item">
-                    <img class="releases__picture" width="150" src="images/avengerspng.png" alt="avengers release">
+                    <a href="./avengers.html">
+                    <img class="releases__picture" width="150" height="226" src="images/avengerspng.png" alt="avengers release">
                     <div class="rating__wrapper">
                         <img src="images/svg/star.svg" alt="rating star">
                         <span>4.5</span>
                     </div>
+                </a>
                 </li class="releases__item">
                 <li class="releases__item">
-                    <img class="releases__picture" width="150" src="images/guardians.png" alt="guardians release">
+                    <img class="releases__picture" width="150" height="226" src="images/guardians.png" alt="guardians release">
                     <div class="rating__wrapper">
                         <img src="images/svg/star.svg" alt="rating star">
                         <span>2.1</span>
                     </div>
                 </li>
                 <li class="releases__item">
-                    <img class="releases__picture" width="150" src="images/hulk.png" alt="hulk release">
+                    <img class="releases__picture" width="150" height="226" src="images/hulk.png" alt="hulk release">
                     <div class="rating__wrapper">
                         <img src="images/svg/star.svg" alt="rating star">
                         <span>3.5</span>
@@ -99,7 +96,6 @@
                 </li>
             </ul>
         </section>
-
         <section id="series">
             <h2 class="series__title">Series</h2>
             <ul class="series__news">
@@ -115,7 +111,6 @@
                         <p class="series__news--description">March 2022</p>
                     </a>
                 </li>
-
             <li class="series__news--item">
                 <a class="series__link" href="#">
                     <img class="series__picture" src="images/april.png" width="250" alt="april">
@@ -151,7 +146,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div>
+        <div class="social-icon__wrapper">
             <img src="images/marvel-logo.png" width="90" height="40" alt="marvel-logo">
             <p>Copyright 2022 Super-Heroes Shop</p>
             <ul class="social-icon__list">
@@ -166,7 +161,7 @@
                 </li>
             </ul>
         </div>
-        <ul class="footer-menu">
+        <ul>
             <h3>Menu</h3>
             <li><a href="#news">News</a></li>
             <li><a href="#series">Series</a></li>
